# codeball

./: CMakeLists.txt  H.cpp  H.h  Helper.cpp  Helper.h  MyStrategy.cpp  README.md  RemoteProcessClient.cpp  RemoteProcessClient.h  Runner.cpp  Simulator.h  SmartSimulator.h  Strategy.h  as-mvj-tpt-2-1200  compile.sh  dev-1-10-mutations  dev-minimax-off  only_goalkeeper  v18  v20  v20-fixa-mutate  v22  v36-release  v44  v56-check-kek-1  v70.h  v73.h
RewindClient/: RewindClient.h
RewindClient/csimplesocket/: CMakeLists.txt  Makefile  cmake_install.cmake  csimplesocket.cbp
RewindClient/csimplesocket/include/csimplesocket/: ActiveSocket.h  Host.h  PassiveSocket.h  SimpleSocket.h  StatTimer.h
RewindClient/csimplesocket/src/: ActiveSocket.cpp  PassiveSocket.cpp  SimpleSocket.cpp
model/: Action.h  Ball.h  C.cpp  C.h  CollisionTrigger.h  Constants.cpp  Constants.h  Dan.h  Entity.h  EntityState.h  Game.cpp  Game.h  MyAction.h  MyTimer.h  NitroPack.h  P.cpp  P.h  Pack.h  Painter.cpp  Painter.h  Plan.h  Point.h  Point2d.h  Robot.h  getCPUTime.h
